force-app/main/objects/Assessment__c.object
<CustomObject>
    <description>Area to keep list of all course types, codes, costs and venues</description>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Account_Manager</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assessments (Account)</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assessment_Date__c</fullName>
        <label>Assessment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BU__c</fullName>
        <description>Business Unit which the assessment relates to</description>
        <inlineHelpText>Where the assessment is run</inlineHelpText>
        <label>Assessment Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Luxembourg</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Nigeria</fullName>
                </value>
                <value>
                    <fullName>Norway</fullName>
                </value>
                <value>
                    <fullName>Oman</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>Qatar</fullName>
                </value>
                <value>
                    <fullName>Saudi Arabia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Billing contact for Sun order</inlineHelpText>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessment (In Company Billing Contact)</relationshipLabel>
        <relationshipName>Assessment_BillingContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Booker_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Booker Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Assessments (Booker Contact)</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_Email__c</fullName>
        <label>Candidate Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Candidate_Permission_Report__c</fullName>
        <label>Candidate Permission Report</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Candidate_Phone_Number__c</fullName>
        <label>Candidate Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Assessment category to identify group,individual, internal or partner.</description>
        <label>Assessment Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Group T&amp;E</fullName>
                </value>
                <value>
                    <fullName>Group A&amp;B</fullName>
                </value>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <label>Consultant</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Free_Spaces__c</fullName>
        <description>Calculated field to get the free/available spaces for a Course.</description>
        <formula>Maximum_Delegates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Free Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_Date__c</fullName>
        <label>Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Credit_Note_Notes__c</fullName>
        <inlineHelpText>For SSC use</inlineHelpText>
        <label>Credit Note Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Reason__c</fullName>
        <label>Credit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S04 - Client Order Error</fullName>
                </value>
                <value>
                    <fullName>S05 - Operator Error</fullName>
                </value>
                <value>
                    <fullName>S07 - Client Cancelled Assessment</fullName>
                </value>
                <value>
                    <fullName>S08 - SPS Cancelled Assessment</fullName>
                </value>
                <value>
                    <fullName>S09 - Goodwill Gesture</fullName>
                </value>
                <value>
                    <fullName>S11 - System Error</fullName>
                </value>
                <value>
                    <fullName>S07 - Client Cancelled Training</fullName>
                </value>
                <value>
                    <fullName>S08 - SHL Cancelled Course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <label>Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be credited</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_Text_Description__c</fullName>
        <label>Credit Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currency_to_Invoice__c</fullName>
        <label>Currency to Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>DKK</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>HKD</fullName>
                </value>
                <value>
                    <fullName>INR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>NZD</fullName>
                </value>
                <value>
                    <fullName>SEK</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>ZAR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer_Order_Ref__c</fullName>
        <label>Customer Order Ref</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_No__c</fullName>
        <formula>Partner_Account_Name__r.Account_Number__c</formula>
        <label>D-No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>D_Number__c</fullName>
        <label>D Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Expenses_Invoiced__c</fullName>
        <label>Date Expenses Invoiced</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Mode__c</fullName>
        <label>Delivery Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Face to Face</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Blended</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Department_Code__c</fullName>
        <label>Department Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DLYZZUT - Delivery Assessment Utrecht</fullName>
                    <default>true</default>
                    <label>DLYZZUT - Delivery Assessment Utrecht</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Assessment Description</description>
        <label>Position Assessed For</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>To replace duration formula field renamed to Old</description>
        <label>Duration</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Amount__c</fullName>
        <inlineHelpText>Expense value for incompany courses - note this is in the currency of the course</inlineHelpText>
        <label>Expense Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Credit_Amount__c</fullName>
        <label>Expense Credit Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expense_Credit_Date__c</fullName>
        <label>Expense Credit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Credit_Notes__c</fullName>
        <description>For SSC use</description>
        <label>Expense Credit Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Credit_Reason__c</fullName>
        <label>Expense Credit Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>S04 - Client Order Error</fullName>
                </value>
                <value>
                    <fullName>S05 - Operator Error</fullName>
                </value>
                <value>
                    <fullName>S07 - Client Cancelled Training</fullName>
                </value>
                <value>
                    <fullName>S08 - SHL Cancelled Course</fullName>
                </value>
                <value>
                    <fullName>S09 - Goodwill Gesture</fullName>
                </value>
                <value>
                    <fullName>S11 - System Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Credit_Status__c</fullName>
        <label>Expense Credit Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be credited</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Credit_Text_Description__c</fullName>
        <label>Expense Credit Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Date__c</fullName>
        <label>Expense Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Notes__c</fullName>
        <inlineHelpText>For SSC use</inlineHelpText>
        <label>Expense Invoice Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Status__c</fullName>
        <label>Expense Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be invoiced</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Competed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_Invoice_Text_Description__c</fullName>
        <label>Expense Invoice Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Item_Master_Lookup__c</fullName>
        <label>Expense Credit IM code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expense_SUN_Credit_Note_Number__c</fullName>
        <label>Expense SUN Credit Note Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expense_SUN_Order_Number__c</fullName>
        <label>Expense SUN Order Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inco_Expense_IM_Code__c</fullName>
        <defaultValue>&quot;DEB&quot;</defaultValue>
        <inlineHelpText>This code should always be the same so is for information only</inlineHelpText>
        <label>Expense Item Master Lookup</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Language__c</fullName>
        <label>Invoice Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Swiss</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Notes__c</fullName>
        <inlineHelpText>For SSC use</inlineHelpText>
        <label>Invoice Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invoice_Status__c</fullName>
        <label>Ass Invoice Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to be invoiced</fullName>
                </value>
                <value>
                    <fullName>Queried</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Invoice_Text_Description__c</fullName>
        <label>Invoice Text Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Item_Master_Lookup__c</fullName>
        <inlineHelpText>Sun Item Master code lookup for SOE</inlineHelpText>
        <label>Item Master Lookup</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Profit_Centre__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1:1 Delivery</fullName>
                    <default>true</default>
                    <label>1:1 Delivery</label>
                </value>
                <value>
                    <fullName>Grp-Assess-Dlvy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>Lead source for Sun SOE data entry</description>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>L01 - Advertisement</fullName>
                </value>
                <value>
                    <fullName>L02 - News story / article</fullName>
                </value>
                <value>
                    <fullName>L03 - SHL newsletter</fullName>
                </value>
                <value>
                    <fullName>L04 - Promotional campaign email</fullName>
                </value>
                <value>
                    <fullName>L05 - Promotional campaign direct mail</fullName>
                </value>
                <value>
                    <fullName>L06 - Promotional campaign call</fullName>
                </value>
                <value>
                    <fullName>L07 - SHL Sales / Account Manager / Consultant discussion</fullName>
                </value>
                <value>
                    <fullName>L08 - SHL Duty Consultant</fullName>
                </value>
                <value>
                    <fullName>L09 - SHL Partner</fullName>
                </value>
                <value>
                    <fullName>L10 - SHL website promotion</fullName>
                </value>
                <value>
                    <fullName>L11 - Other (non-SHL) website promotion</fullName>
                </value>
                <value>
                    <fullName>L12 - Reputation / referral</fullName>
                </value>
                <value>
                    <fullName>L13 - Conference / seminar attendance</fullName>
                </value>
                <value>
                    <fullName>L14 - SHL training course attendance</fullName>
                </value>
                <value>
                    <fullName>L15 - Exhibition / trade show attendance</fullName>
                </value>
                <value>
                    <fullName>LZZ - No specified source (eg. simple repeat order)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maximum_Delegates__c</fullName>
        <inlineHelpText>This can be a maximum of 2 digits</inlineHelpText>
        <label>Max Delegates</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>Full name of the Assessment</description>
        <label>Assessment Candidate</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Consulting_Price__c</fullName>
        <label>Group Other Consulting Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PO_Details__c</fullName>
        <label>PO Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to account for incompany or partner course</description>
        <inlineHelpText>Use this to record the account for Partner and In company courses</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Assessment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Country__c</fullName>
        <label>Partner Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Middle East</fullName>
                </value>
                <value>
                    <fullName>Europe</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Jamaica</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pass_Status__c</fullName>
        <label>Pass Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Conditional</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Group Assessment Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Profit_Centre__c</fullName>
        <inlineHelpText>Where the revenue is recognised</inlineHelpText>
        <label>Profit Centre</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Belgium - BE5</fullName>
                </value>
                <value>
                    <fullName>Denmark - DK5</fullName>
                </value>
                <value>
                    <fullName>France - FR5</fullName>
                </value>
                <value>
                    <fullName>Netherlands - NL5</fullName>
                    <default>true</default>
                    <label>Netherlands - NL5</label>
                </value>
                <value>
                    <fullName>Germany - DE5</fullName>
                </value>
                <value>
                    <fullName>Sweden - SE1</fullName>
                </value>
                <value>
                    <fullName>UK - UK1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This field must be added if the assessment category = Group T&amp;E.</inlineHelpText>
        <label>Project Number</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Assessments</relationshipLabel>
        <relationshipName>Assessments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_of_Cancellation__c</fullName>
        <description>Reason of Cancellation</description>
        <inlineHelpText>Enter the reason of cancellation</inlineHelpText>
        <label>Reason of Cancellation</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_No__c</fullName>
        <formula>Billing_Contact__r.Registration_Number__c</formula>
        <label>Registration No</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Number__c</fullName>
        <label>Registration Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <label>Assessment Room</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Room 1</fullName>
                </value>
                <value>
                    <fullName>Room 2</fullName>
                </value>
                <value>
                    <fullName>Room 3</fullName>
                </value>
                <value>
                    <fullName>Room 4</fullName>
                </value>
                <value>
                    <fullName>Room 5</fullName>
                </value>
                <value>
                    <fullName>Room 6</fullName>
                </value>
                <value>
                    <fullName>Room 7</fullName>
                </value>
                <value>
                    <fullName>Room 8</fullName>
                </value>
                <value>
                    <fullName>Room 9</fullName>
                </value>
                <value>
                    <fullName>Room 10</fullName>
                </value>
                <value>
                    <fullName>Room 11</fullName>
                </value>
                <value>
                    <fullName>Room 12</fullName>
                </value>
                <value>
                    <fullName>Room 13</fullName>
                </value>
                <value>
                    <fullName>Room 14</fullName>
                </value>
                <value>
                    <fullName>Room 15</fullName>
                </value>
                <value>
                    <fullName>Group Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSC_Email__c</fullName>
        <label>SSC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SUN_Credit_Note_Number__c</fullName>
        <label>SUN Credit Note Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shift__c</fullName>
        <label>Shift</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Full Day</fullName>
                </value>
                <value>
                    <fullName>More than 1 day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Assessment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Provisional</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sun_Order_Number__c</fullName>
        <description>For incompany, internal and partner courses where the invoice is for the course not per booking</description>
        <inlineHelpText>Add the Sun order number for any courses which are invoiced for the whole course not per booking. Format must be xxx/xxxxxx.</inlineHelpText>
        <label>SUN Order Number</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Total_Price__c</fullName>
        <description>For those assessments invoiced at assessment level not per booking</description>
        <inlineHelpText>For those assessments invoiced at assessment level not per booking</inlineHelpText>
        <label>Total Assessment Price</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translation_Price__c</fullName>
        <label>Group Translation Price</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Assessment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Category__c</columns>
        <columns>Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Group_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Name__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Category__c</field>
            <operation>equals</operation>
            <value>Group T&amp;E,Group A&amp;B</value>
        </filters>
        <label>All Group Assessments</label>
    </listViews>
    <listViews>
        <fullName>All_Individual_Assessments</fullName>
        <columns>NAME</columns>
        <columns>Category__c</columns>
        <columns>Description__c</columns>
        <columns>Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Assessment_Date__c</field>
            <operation>greaterThan</operation>
            <value>1/1/2022</value>
        </filters>
        <label>All Individual Assessments</label>
    </listViews>
    <nameField>
        <displayFormat>AS{000000}</displayFormat>
        <label>Assessment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AssessmentEndDateSmall</fullName>
        <active>true</active>
        <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
        <errorMessage>Assessment End Date must be after Assessment Start date</errorMessage>
    </validationRules>
</CustomObject>